adding in lines

--- a/red-server/views/index.html
+++ b/red-server/views/index.html
@@ -7,7 +7,7 @@
     <title>webpack tutorial</title>
   </head>
   <body>
-  	
+  	 <div style="position:absolute;left:300px;" id="additional"></div>
   	<div id="root">
   		
   	</div>
@@ -16,4 +16,3 @@
   </body>
 
 </html>
-
