--- a/node-red-react-editor/style/sass/colors.scss
+++ b/node-red-react-editor/style/sass/colors.scss
@@ -20,13 +20,13 @@ $form-input-focus-color:  rgba(85,150,230,0.8);
 $form-input-border-color:  #ccc;
 
 
-$node-selected-color: #ff7f0e;
+$node-selected-color: #6FB3D2;
 $port-selected-color: #ff7f0e;
 $link-color: #888;
 $link-subflow-color: #bbb;
 $link-unknown-color: #f00;
 
-$primary-border-color: #bbbbbb;
+$primary-border-color: #fff;
 $secondary-border-color: #dddddd;
 
 $tab-background-active: #fff;
