--- a/node-red-react-editor/style/sass/palette.scss
+++ b/node-red-react-editor/style/sass/palette.scss
@@ -30,14 +30,15 @@
 .palette-scroll {
     display: none;
     position: absolute;
-    top: 35px;
+    top: 0px;
     right: 0;
-    bottom: 25px;
+    bottom: 0px;
     left:0;
-    padding: 0;
+    padding: 10px 0px 0px 0px;
     overflow-y: auto;
     box-sizing:border-box;
 }
+
 .palette-spinner {
     padding-top: 40px;
 }
