--- a/red-server/views/index.html
+++ b/red-server/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>webpack tutorial</title>
+    <title>databox sdk</title>
   </head>
   <body>
   	 <div style="position:absolute;left:300px;" id="additional"></div>
