--- a/red-server/views/index.html
+++ b/red-server/views/index.html
@@ -12,7 +12,7 @@
   		
   	</div>
     
-    <script src="http://localhost:8080/editor.js"></script>
+    <script src="editor.js"></script>
   </body>
 
 </html>
