--- a/node-red-react-editor/style/sass/colors.scss
+++ b/node-red-react-editor/style/sass/colors.scss
@@ -37,13 +37,13 @@ $palette-header-background: #f3f3f3;
 
 $workspace-button-background: #fff;
 $workspace-button-background-hover: #ddd;
-$workspace-button-background-active: #efefef;
+$workspace-button-background-active: #8C101C;;
 $workspace-button-color: #999;
 $workspace-button-color-disabled: #ccc;
 $workspace-button-color-focus: #999;
 $workspace-button-color-hover: #666;
 $workspace-button-color-active: #666;
-$workspace-button-color-selected: #AAA;
+$workspace-button-color-selected: #fff;
 
 $typedInput-button-background: #efefef;
 $typedInput-button-background-hover: #ddd;
