adding support for multiple packages (tabs)

--- a/node-red-react-editor/style/sass/colors.scss
+++ b/node-red-react-editor/style/sass/colors.scss
@@ -26,7 +26,7 @@ $link-color: #888;
 $link-subflow-color: #bbb;
 $link-unknown-color: #f00;
 
-$primary-border-color: #fff;
+$primary-border-color: #bbb;
 $secondary-border-color: #dddddd;
 
 $tab-background-active: #fff;
