--- a/node-red-react-editor/style/jquery/style.css
+++ b/node-red-react-editor/style/jquery/style.css
@@ -455,7 +455,8 @@ button.ui-button::-moz-focus-inner {
 .ui-dialog .ui-dialog-content {
     position: relative;
     border: 0;
-    padding: .5em 1em;
+    /*padding: .5em 1em;*/
+    padding: 0;
     background: 0;
     overflow: auto
 }
