--- a/node-red-react-editor/style/sass/cells.scss
+++ b/node-red-react-editor/style/sass/cells.scss
@@ -15,6 +15,7 @@ html{
     display: -webkit-flex;
     display: flex;
     flex: 1 1 auto;
+    -webkit-flex: 1 1 auto;
     -webkit-flex-direction: column;
     flex-direction: column;
     
@@ -24,6 +25,7 @@ html{
  	display: -webkit-flex;
     display: flex;
     flex: 1 1 auto;
+     -webkit-flex: 1 1 auto;
     border-bottom: 1px solid #b6b6b6;
  	min-height: 40px;  
 }
@@ -33,13 +35,16 @@ html{
     display: -webkit-flex;
     display: flex;
     flex: 1 1 auto;
+     -webkit-flex: 1 1 auto;
     -webkit-flex-direction: row;
     flex-direction: row;
 }
 
 .flexrow > div {
+    display: -webkit-flex;
     display: flex;
     flex: 1 1 0;
+     -webkit-flex: 1 1 0;
     height: inherit;
     
 }
@@ -52,13 +57,17 @@ html{
 
 
 .flexcolumn > .headerstyle {
+    display: -webkit-flex;
     display: flex;
+     -webkit-flex: 0 0 auto;
     flex: 0 0 auto;
     height: 40px;
 }
 
 .flexcolumn > .statusstyle {
+ 	display: -webkit-flex;
     display: flex;
+     -webkit-flex: 0 0 auto;
     flex: 0 0 auto;
     height: 40px;
     color: white;
@@ -66,13 +75,17 @@ html{
 }
 
 .flexcolumn > .footerstyle {
+	display: -webkit-flex;
     display: flex;
+     -webkit-flex: 0 0 auto;
     flex: 0 0 auto;
     height: 40px;
 }
 
 .flexrow > .title {
+	display: -webkit-flex;
 	display: flex;
+	 -webkit-flex: 0 0 auto;
     flex: 0 0 auto;
     width: 100px;
    
@@ -84,6 +97,7 @@ html{
 }
 
 .flexrow > .header {
+	display: -webkit-flex;
 	display: flex;
    	border-right:  1px solid #b6b6b6;
    	background: #f2f2f2;
@@ -92,12 +106,14 @@ html{
 }
 
 .flexrow > .disabled {
+	display: -webkit-flex;
 	display: flex;
    	background: #f2f2f2;
 }
 
 
 .flexrow  .icon {
+	display: -webkit-flex;
     display: flex;
     flex: 0 1 50px;
     width: 50px;
@@ -112,6 +128,7 @@ html{
 }
 
 .flexrow > .submit {
+	display: -webkit-flex;
     display: flex;
     flex: 0 1 auto;
     width: 70px;
@@ -177,7 +194,9 @@ html{
 
 
 .flexcontainer{
+	display: -webkit-flex;
 	display: flex;	
+	
 	width: inherit;
 	/*height: inherit;*/
 	-webkit-flex-direction: column;
@@ -185,6 +204,7 @@ html{
 }
 
 .repocontainer{
+	display: -webkit-flex;
 	display: flex;	
 	width: inherit;
 	height: inherit;
@@ -202,4 +222,11 @@ html{
 	text-align:center;
 	box-shadow: 5px 0px 7px -3px rgba(0, 0, 0, 0.36);
 	margin: 10px;
+}
+
+.text{
+	background: #d45500;
+	color: white;
+	padding: 10px;
+	font-size: 1.2em;
 }
