--- a/node-red-react-editor/style/sass/editor.scss
+++ b/node-red-react-editor/style/sass/editor.scss
@@ -104,3 +104,10 @@
     float:left;
     font-size: 12px;
 }
+
+.animated{
+    -webkit-transition:all 300ms ease-in-out, height 300ms ease-in-out;
+    -moz-transition:all 300ms ease-in-out, height 300ms ease-in-out;
+    -o-transition:all 300ms ease-in-out, height 300ms ease-in-out;
+    transition:all 300ms ease-in-out, height 300ms ease-in-out;
+}
