--- a/node-red-react-editor/style/sass/cells.scss
+++ b/node-red-react-editor/style/sass/cells.scss
@@ -174,6 +174,16 @@ html{
 	margin: 0px;
 }
 
+#sidebar input[type="text"], 
+.ui-dialog input[type="text"], 
+.ui-dialog select{
+	width: 100%;
+	height: inherit;
+	border-radius: 0;
+	padding: 0px;
+	margin: 0px;
+}
+
 #publisher .flexcontainer textarea,,
 .ui-dialog textarea{
 	width: 100%;
