--- a/node-red-react-editor/style/sass/cells.scss
+++ b/node-red-react-editor/style/sass/cells.scss
@@ -51,6 +51,12 @@ html{
 }
 
 
+#publisher .centered{
+ 	margin: auto;
+    text-align: center;
+    width: auto;
+}
+
 .centered{
     margin: auto;
     text-align: center;
