--- a/node-red-react-editor/style/sass/cells.scss
+++ b/node-red-react-editor/style/sass/cells.scss
@@ -72,7 +72,6 @@ html{
     margin: auto;
     text-align: center;
     width: 100%;
-    padding: 0px 10px 0px 10px;
 }
 
 
@@ -170,17 +169,13 @@ html{
    box-shadow: 5px 0px 7px -3px rgba(0,0,0,0.36);
 }
 
-.centered{
-  text-align: center;
-  margin:auto;
-}
-
-
 #repomanager input{
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
 
+
+#nodeeditor select,
 #sidebar input[type="text"], 
 #publisher input[type="text"], 
 #nodeeditor input[type="text"], 
@@ -189,18 +184,22 @@ html{
 	width: 100%;
 	height: inherit;
 	border-radius: 0;
-	padding: 0px;
 	margin: 0px;
+	height: 40px;
+	border: none;
+	padding: 0px 0px 0px 10px;
+	box-shadow: none;
 }
 
+
 #publisher .flexcontainer textarea,
-#nodeeditor .flexcontainer textarea,
+#nodeeditor textarea,
 .ui-dialog textarea{
 	width: 100%;
 	border-radius: 0;
-	padding: 0;
+	padding: 0px 0px 0px 10px;
 	margin: 0;
-	height: 100px;
+	height: 70px;
 	border: none;
 }
 
