--- a/node-red-react-editor/style/sass/cells.scss
+++ b/node-red-react-editor/style/sass/cells.scss
@@ -154,8 +154,6 @@ html{
 
 .button{
   margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
   padding: 9px;
   color: #727272;
   text-transform: uppercase;
@@ -164,9 +162,10 @@ html{
 .button.selected{
   background: #d35a51;
   color: white;
-  -webkit-box-shadow: 5px 0px 7px -3px rgba(0,0,0,0.36);
-   -moz-box-shadow: 5px 0px 7px -3px rgba(0,0,0,0.36);
-   box-shadow: 5px 0px 7px -3px rgba(0,0,0,0.36);
+  border: 1px solid white;
+  height: 40px;
+  margin: 0px;
+  width: 100%;
 }
 
 #repomanager input{
