--- a/src/server/views/login.html
+++ b/src/server/views/login.html
@@ -91,7 +91,7 @@
 				<div>
 				
 					<div class="centered" style="padding-bottom:30px;height: calc(100% - 120px)">
-						<img src="img/editor.svg" height="100%"/>
+						<img src="images/editor.svg" height="100%"/>
 					</div>
 			
 				</div>
