--- a/src/client/assets/js/features/nodes/components/NodeEditor/NodeEditor.scss
+++ b/src/client/assets/js/features/nodes/components/NodeEditor/NodeEditor.scss
@@ -3,6 +3,30 @@
 	background: white;
 	z-index: 20;
 	overflow: auto;
-	boxShadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+	box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
 	border: 1px solid #d3d3d3;	
+}
+
+.editor-icon {
+    align-self: center;
+    color:white;
+    text-align: center;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+    color: white;
+    height: 7em;
+    width: 7em;
+    line-height: 10em;
+}
+
+  
+.editor-description {
+	color: black;
+	background: #f2f2f2;
+	text-align: left;
+	-webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    overflow: auto;
+    width: 100%;
+    padding: 15px 15px 30px 15px;
+    font-size: 1em;
 }
