--- a/src/client/assets/js/nodes/outputs/uibuilder/features/editor/components/Editor.scss
+++ b/src/client/assets/js/nodes/outputs/uibuilder/features/editor/components/Editor.scss
@@ -1,10 +1,8 @@
-.editor{
+.uieditor{
 	width: 100%;
 	height: 100%;
 }
 
 .canvascontainer{
 	position: absolute;
-	left: 100px;
-	height: 100%;
 }
