ui improvements, svgs as icons

--- a/src/client/assets/js/nodes/processors/uibuilder/features/palette/components/Palette.scss
+++ b/src/client/assets/js/nodes/processors/uibuilder/features/palette/components/Palette.scss
@@ -3,3 +3,14 @@
 	height: 100%;
 	background: blue;
 }
+
+.groupcontainer{
+	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
+	width: 214px;
+	height: 178px;
+	z-index: 1;
+	background:white;
+	margin: 12px 0px 12px 140px;
+	overflow-y:auto;
+	overflow-x:hidden;
+}
