--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -8,12 +8,29 @@
   <link rel="shortcut icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://unpkg.com/react@latest/dist/react.js"></script>
+  <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
+  <script src="/lib/store.js"></script>
+  <script src="/lib/installer.js"></script>
+  <script src="/lib/nodelib.js"></script>
+  
+  <!--<script src="/lib/testbulb.js"></script>
+  
+  <script>
+    window.onload = function () {
+       console.log("ok have got testbulb", testbulb);
+       console.log(storelib.get());
+       console.log("isntallimhg testbulb!");
+       installer.install(testbulb);
+       console.log("done!");
+    };
+  </script>-->
+  
 <link rel="stylesheet" href="/css/app.css"></head>
 <body>
 
 <div id="app"></div>
 
-<script src="/js/vendor.bundle.js"></script>
 <script src="/js/application.js"></script>
 </body>
 </html>
