added in config support for dockerised version of sdk

--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -13,20 +13,8 @@
   <script src="/lib/store.js"></script>
   <script src="/lib/installer.js"></script>
   <script src="/lib/nodelib.js"></script>
-  
-  <!--<script src="/lib/testbulb.js"></script>
-  
-  <script>
-    window.onload = function () {
-       console.log("ok have got testbulb", testbulb);
-       console.log(storelib.get());
-       console.log("isntallimhg testbulb!");
-       installer.install(testbulb);
-       console.log("done!");
-    };
-  </script>-->
-
-<link rel="stylesheet" href="/css/app.css"></head>
+  <link rel="stylesheet" href="/css/app.css">
+</head>
 <body>
 
 <div id="app"></div>
