--- a/src/client/assets/js/nodes/processors/uibuilder/features/mapper/components/Mapper/Mapper.scss
+++ b/src/client/assets/js/nodes/processors/uibuilder/features/mapper/components/Mapper/Mapper.scss
@@ -6,3 +6,16 @@
     background: #445662;
     width: 250px;
 }
+
+.title{
+    background: #535353;
+    color: white;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+
+.info{
+	padding: 7px;
+}
