--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -10,11 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="/lib/react-15.6.1.min.js"></script>
   <script src="/lib/reactdom-15.6.1.min.js"></script>
-  <script src="/lib/store.js"></script>
-  <script src="/lib/installer.js"></script>
   <script src="/lib/nodelib.js"></script>
-  <link rel="stylesheet" href="/css/app.css">
-</head>
+
+<link rel="stylesheet" href="/css/app.css"></head>
 <body>
 
 <div id="app"></div>
