updated restart instructions

--- a/src/server/views/settings.html
+++ b/src/server/views/settings.html
@@ -36,7 +36,7 @@
 		
     <div class="row">
       <pre>
-        <code> ./startDatabox.sh sdk </code>
+        <code> docker-compose -f docker-databox-sdk.yaml restart databox-sdk</code>
       </pre>
     </div>
   
