added in context sensitive help

--- a/src/client/assets/js/nodes/processors/uibuilder/features/mapper/components/Mapper/Mapper.scss
+++ b/src/client/assets/js/nodes/processors/uibuilder/features/mapper/components/Mapper/Mapper.scss
@@ -7,7 +7,7 @@
     width: 250px;
 }
 
-.title{
+#mapper .title{
     background: #535353;
     color: white;
     width: 100%;
@@ -16,6 +16,6 @@
     text-align: center;
 }
 
-.info{
+#mapper .info{
 	padding: 7px;
 }
